// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`formatReleaseNotes — description rendering (F4) > renders descriptions indented under bullets when populated (mixed populated + empty) 1`] = `
"## v1.0.0

**Released:** 2026-04-29 | **Tag:** [v1.0.0](https://github.example.com/owner/app/releases/tag/v1.0.0) | **Issues:** 4 closed | 1 uncategorized

---

#### New Features
- Add dark mode (#101)
  - Adds a dark theme toggle in user settings, persisted across sessions.
- Export as PDF (#102)

#### Bug Fixes
- Fix login redirect (#155)
  - Users were redirected to /login instead of their target after SSO callback so the deep link was lost completely on every sign-in attempt regardless of provider…

#### Other
- Bump deps (#180)
  - Routine dependency updates for the month.

---

*Generated by [ReleaseJet](https://github.com/makisp/releasejet)*"
`;

exports[`formatReleaseNotes — description rendering (F4) > renders no description lines when extraction is off (regression guard) 1`] = `
"## v1.0.0

**Released:** 2026-04-29 | **Tag:** [v1.0.0](https://github.example.com/owner/app/releases/tag/v1.0.0) | **Issues:** 4 closed | 1 uncategorized

---

#### New Features
- Add dark mode (#101)
- Export as PDF (#102)

#### Bug Fixes
- Fix login redirect (#155)

#### Other
- Bump deps (#180)

---

*Generated by [ReleaseJet](https://github.com/makisp/releasejet)*"
`;
